WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210807
Reset m_userScriptsNotified when web process crashes
https://bugs.webkit.org/show_bug.cgi?id=210807
Summary
Reset m_userScriptsNotified when web process crashes
Timothy Hatcher
Reported
2020-04-21 11:09:29 PDT
For the _deferrableUserScriptsNeedNotification SPI, we need to reset m_userScriptsNotified when the web process crashes. Otherwise scripts can't be injected again.
Attachments
Patch
(3.64 KB, patch)
2020-04-21 11:11 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2020-04-21 11:11:25 PDT
Created
attachment 397096
[details]
Patch
EWS
Comment 2
2020-04-21 11:42:50 PDT
Committed
r260446
: <
https://trac.webkit.org/changeset/260446
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 397096
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-04-21 11:43:15 PDT
<
rdar://problem/62122502
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug