Reset m_userScriptsNotified when web process crashes. https://bugs.webkit.org/show_bug.cgi?id=210807

Reviewed by Alex Christensen.

Source/WebKit:

* UIProcess/WebPageProxy.cpp:
(WebPageProxy::resetStateAfterProcessExited): Set m_userScriptsNotified to false.

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/UserContentController.mm:
(TEST): Test crashing the web process and reloading.


Canonical link: https://commits.webkit.org/223695@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260446 268f45cc-cd09-0410-ab3c-d52691b4dbfc